--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ img/avatars/
 inc/tmp/
 ***REMOVED***
 inc/config/database.php
-***REMOVED***
+css/*/editor_skin.pdn
 import.php
 notification_token
 ***REMOVED***
